# ocaml_flatcalc

./: README.md  dune-project  flatcalc.opam
lib/: dune  first.ml  second.ml
test/: dune
